Fix text align

--- a/features/home/features/hero/molecules/Profile/Profile.css
+++ b/features/home/features/hero/molecules/Profile/Profile.css
@@ -78,5 +78,6 @@
 
   @media (max-width: 768px) {
     justify-self: center;
+    text-align: center;
   }
 }
